Rotating sun complete

--- a/gl_tut.vcxproj
+++ b/gl_tut.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="source\Body.cpp" />
     <ClCompile Include="source\gl_core_4_4.c" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\Sun.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Body.h" />
@@ -143,6 +144,8 @@
     <ClInclude Include="include\glm\glm.hpp" />
     <ClInclude Include="include\glm\gtx\transform.hpp" />
     <ClInclude Include="include\gl_core_4_4.h" />
+    <ClInclude Include="include\Sun.h" />
+    <ClInclude Include="include\Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="libs\glfw3.lib" />
