Refactored into app
Game loop is now a base class, and implemented.

--- a/gl_tut.vcxproj
+++ b/gl_tut.vcxproj
@@ -132,15 +132,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="include\aie\Gizmos.cpp" />
+    <ClCompile Include="source\SolarSystemApp.cpp" />
     <ClCompile Include="source\gl_core_4_4.c" />
     <ClCompile Include="source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Color.h" />
+    <ClInclude Include="include\GameApp.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
     <ClInclude Include="include\GLFW\glfw3native.h" />
     <ClInclude Include="include\glm\glm.hpp" />
     <ClInclude Include="include\glm\gtx\transform.hpp" />
     <ClInclude Include="include\gl_core_4_4.h" />
+    <ClInclude Include="include\SolarSystemApp.h" />
     <ClInclude Include="include\Timer.h" />
   </ItemGroup>
   <ItemGroup>
