--- a/gl_tut.vcxproj
+++ b/gl_tut.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="include\aie\Gizmos.cpp" />
     <ClCompile Include="source\Camera.cpp" />
+    <ClCompile Include="source\FlyCamera.cpp" />
     <ClCompile Include="source\SolarSystemApp.cpp" />
     <ClCompile Include="source\gl_core_4_4.c" />
     <ClCompile Include="source\main.cpp" />
@@ -140,6 +141,7 @@
   <ItemGroup>
     <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\Color.h" />
+    <ClInclude Include="include\FlyCamera.h" />
     <ClInclude Include="include\GameApp.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
     <ClInclude Include="include\GLFW\glfw3native.h" />
