--- a/gl_tut.vcxproj.filters
+++ b/gl_tut.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClInclude Include="include\FlyCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Mouse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="libs\glfw3.lib">
