--- a/gl_tut.vcxproj
+++ b/gl_tut.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="include\aie\Gizmos.cpp" />
     <ClCompile Include="source\Camera.cpp" />
     <ClCompile Include="source\FlyCamera.cpp" />
+    <ClCompile Include="source\Keyboard.cpp" />
     <ClCompile Include="source\Mouse.cpp" />
     <ClCompile Include="source\RenderingGeometryApp.cpp" />
     <ClCompile Include="source\SolarSystemApp.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="include\glm\glm.hpp" />
     <ClInclude Include="include\glm\gtx\transform.hpp" />
     <ClInclude Include="include\gl_core_4_4.h" />
+    <ClInclude Include="include\Keyboard.h" />
     <ClInclude Include="include\RenderingGeometryApp.h" />
     <ClInclude Include="include\SolarSystemApp.h" />
     <ClInclude Include="include\Timer.h" />
